--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
   <div class="balloons" id="balloons"></div>
 
   <!-- إضافة الصوتين -->
-  <audio id="birthdayMusic" src="C:\Users\NDC 721\Downloads\happy-birthday-song-in-japanese-お誕生日のうた.mp3" ></audio>
-  <audio id="secondMusic" src="C:\Users\NDC 721\Downloads\مقطع صوتي واتساب بتاريخ 2025-04-07 في 23.52.24_1c1c86cc.mp3"></audio>
+  <audio id="song1" src="C:\Users\NDC 721\Downloads\happy-birthday-song-in-japanese-お誕生日のうた.mp3" ></audio>
+  <audio id="song2" src="C:\Users\NDC 721\Downloads\مقطع صوتي واتساب بتاريخ 2025-04-07 في 23.52.24_1c1c86cc.mp3"></audio>
 
   <script>
     function showBalloons() {
@@ -94,9 +94,10 @@
       }
 
       // تشغيل الصوتين معًا
-      document.getElementById('birthdayMusic').play();
-      document.getElementById('secondMusic').play();
-    }
+      document.getElementByid("giftButton").addEventListener("click", function () {
+      document.getElementById('song1').play();
+      document.getElementById('song2').play();
+    });
   </script>
 </body>
 </html>
